--- a/packages/ui/src/styles/utilities.css
+++ b/packages/ui/src/styles/utilities.css
@@ -116,3 +116,37 @@
   line-height: var(--line-height-x-large); /* 120% */
   letter-spacing: var(--letter-spacing-tightest);
 }
+
+.studio-custom-tooltip {
+  padding: 4px 8px;
+  background: #161616;
+  color: #fcfcfc;
+  font-size: 12px;
+  font-weight: 500;
+  line-height: 22px;
+  border-radius: 4px;
+  border: 1px solid rgba(0, 0, 0, 0.07);
+  box-shadow: 0 4px 12px rgba(0, 0, 0, 0.12);
+  white-space: normal !important;
+  word-break: break-all;
+  overflow-wrap: break-word;
+  max-width: 360px;
+  max-height: 120px;
+  overflow-y: auto;
+  pointer-events: auto;
+  scrollbar-width: auto;
+  &::-webkit-scrollbar {
+    width: 4px;
+    height: 4px;
+  }
+  &::-webkit-scrollbar-thumb {
+    background-color: rgba(255, 255, 255, 0.25);
+    border-radius: 9999px;
+  }
+  &::-webkit-scrollbar-thumb:hover {
+    background-color: rgba(255, 255, 255, 0.4);
+  }
+  &::-webkit-scrollbar-track {
+    background: transparent;
+  }
+}
